@@ -1,6 +1,6 @@
 {
   "name": "simp-selinux",
-  "version": "2.1.2",
+  "version": "2.2.0",
   "author": "SIMP Team",
   "summary": "manages the SELinux system state",
   "license": "Apache-2.0",
